2005-04-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: Remove blanks from whitespace-only lines.

2005-04-01  Juergen Wieferink <wieferink@freenet.de>

	* docs/doc2tex.c: Handle levels 5 and 6 of documentation text as
	paragraph and subparagraph, respectively.

2005-04-01  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add help keyword for 'newhistogram'.

	* configure.in: If the user configures --without-lisp-files then
	do not try to run configure in the lisp subdirectory.

2005-03-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c (process_event) [!USE_MOUSE]: don't refer to
	objects and functions not defined in this case.

	* src/plot3d.c (eval_3dplots) [!GP_STRING_VARS]: Don't call
	isstringvar() if feature disabled.

	* src/plot2d.c (eval_plots) [!GP_STRING_VARS]: Likewise.

	* src/show.c (show_command): Fix display of 'zeroaxis' settings
	reported by error message.

	* src/set.c (set_command): Likewise.

	* src/unset.c (unset_command): Likewise.

2005-03-29  Ethan Merritt  <merritt@u.washington.edu>

	* demo/candlesticks.dem: Add demo of whiskerbars option.

2005-03-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/plot3d.c src/pm3d.c src/pm3d.h src/save.c
	src/set.c src/show.c src/unset.c: Let pm3d drawing be always available
	without prior "set pm3d": now you can "splot x*y with pm3d" without
	prior "set pm3d". The "explicit" be the default pm3d value after reset.
	For compatibility (historical) reasons (color filled pm3d plot
	combined with mesh line plot): commands "set pm3d;" and "set pm3d at X
	other_opts;" switch pm3d to "implicit". No change for "set pm3d map".

2005-03-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/pm3d.c (set_plot_with_palette): Add a missing #ifdef
	WITH_IMAGE conditional.

2005-03-27  Ethan Merritt  <merritt@u.washington.edu>

	* NEWS configure.in term/gd.trm: Allow storage of a sequence of plots